# genetic_algorithm_lib

./: .gitignore  CMakeLists.txt  README.md  genal.c  genal.h
example/: example.c
